# wojo

./: .envrc  Cargo.toml  LICENSE  README.md  build.rs  justfile  services_and_characteristic.txt
.github/workflows/: cd  ci
src/: app.rs  ble.rs  helpers.rs  lib.rs  main.rs  models.rs  repositories.rs  store_handler.rs  stores.rs  tasks.rs  tui.rs
src/helpers/: get_ble_service_name.rs  get_db_connection.rs  send_msg_type_and_val.rs  set_ui_state.rs
src/models/: adapter_info.rs  adapter_to_adapter_info.rs  effect.rs  get_id_trait.rs  into_model_trait.rs  item.rs  peripheral.rs
src/repositories/: characteristic_repository.rs  service_repository.rs
src/store_handler/: adapter_info_handler.rs  peripheral_slint.rs  side_effect_handler_trait.rs  side_effect_val_trait.rs  store_adapter.rs
src/stores/: devices_store.rs  global_stores.rs  side_navigation_store.rs
src/tasks/: background_task.rs  ble_scan_task.rs
ui/: global.slint  main.slint  main_content.slint  more_actions.slint  service_characteristic.slint  side_navigation.slint
ui/components/: characteristic_card.bak  descriptor_card.slint  text_with_label.slint
ui/icons/: icons.slint
ui/models/: adapter_info.slint  characteristic.slint  characteristic_property_flag.slint  descriptor.slint  option_string.slint  peripheral.slint  service.slint
ui/navigations/: peripheral_navigation_group_template.slint  peripheral_navigation_item_template.slint
ui/shared_components/: expandable.slint
ui/stores/: devices-stores.slint  more_actions_store.slint  service_characteristic_stores.slint  side_navigation_store.slint
(+17 files in other folders)
