[package]
name = "wojo"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "wojo_lib"

[[bin]]
path = "src/main.rs"
name = "wojo"

[dependencies]
btleplug = { version = "0.11.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"]}
slint = { version = "1.13", features = ["backend-android-activity-06", "serde"] }
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
slint-build = { version = "1.13"  }

[package.metadata.android]
package = "ah.ah.wojo"
apk_name = "wojo"

[package.metadata.android.application]
label = "Wojo"
