[package]
name = "wojo"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "wojo_lib"

[[bin]]
path = "src/main.rs"
name = "wojo"

[dependencies]
btleplug = { version = "0.12.0", features = ["serde"] }
btuuid = { version = "0.1.1", features = ["serde", "std", "uuid"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"]}
slint = { version = "1.13", features = ["backend-android-activity-06", "serde"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.23.0"
itertools = "0.14.0"
sea-orm = { version = "2.0.0-rc.32", features = [ 
  "sqlx-sqlite", 
  "runtime-tokio-native-tls", 
  "macros", 
  "with-chrono"
] }

[build-dependencies]
slint-build = { version = "1.13"  }

[package.metadata.android]
package = "ah.ah.wojo"
apk_name = "wojo"

[package.metadata.android.application]
label = "Wojo"
